# argumentclinic-mcp

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
migrations/: 001_initial.sql
src/: main.rs
src/api/: client.rs  mod.rs
src/cli/: analyze.rs  config.rs  mod.rs  serve.rs
src/config/: mod.rs  models.rs
src/db/: mod.rs  models.rs
src/mcp/: server.rs
src/pipeline/: attacker.rs  defender.rs  judge.rs  mod.rs  synthesizer.rs
src/providers/: anthropic.rs  deepseek.rs  dynamic.rs  gemini.rs  generic.rs  grok.rs  mod.rs  openai.rs
